# serializer version: 1
# name: test_setup[encrypted]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
        tuple(
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ),
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'samsungtv',
          'be9554b9-c9fb-41f4-8920-22da015376a4',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': None,
      'model': None,
      'model_id': None,
      'name': 'Mock Title',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_setup[legacy]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'samsungtv',
          '123456',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': None,
      'model': None,
      'model_id': None,
      'name': 'Mock Title',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_setup[websocket]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
        tuple(
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ),
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'samsungtv',
          'be9554b9-c9fb-41f4-8920-22da015376a4',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': None,
      'model': None,
      'model_id': 'UE43LS003',
      'name': 'Mock Title',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
